--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
             </div>
         </div>
     </div>
-    <div class="controls" style="display: none;">
+    <div class="controls">
         <ul>
             <li class="user_control_1" data-control="dimensions">Dimensions <span>.1</span></li>
             <li class="user_control_2" data-control="aerodynamics">Aerodynamics <span>.2</span></li>
